--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -3,7 +3,7 @@
 .root {
   display: flex;
   padding-top: $space-xxl;
-  padding-bottom: $space-xxl;
+  // padding-bottom: $space-xxl;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -14,7 +14,7 @@
   font-weight: 500;
   max-width: 720px;
   line-height: 1.5;
-  margin-bottom: $space-ml;
+  margin-bottom: $space-xxl;
 }
 
 .description {
