--- a/src/layouts/LeftSection/LeftSection.module.scss
+++ b/src/layouts/LeftSection/LeftSection.module.scss
@@ -2,12 +2,28 @@
 
 .root {
   width: $fix-left-space;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
-  bottom: 0;
+  @include screen(phone) {
+    display: none;
+  }
+  @include screen(tabPortrait) {
+    display: none;
+  }
+  @include screen(tabLandscape) {
+    display: none;
+  }
+  @include screen(desktop) {
+    display: block;
+  }
+  @include screen(desktopWide) {
+    display: block;
+  }
 }
 
 .fixed {
-  position: fixed;
-  left: 0;
+  max-height: 100vh;
+  position: sticky;
+  top: 0;
+  padding-bottom: $space-ll;
 }
