--- a/src/layouts/CodeAlt/CodeAlt.module.scss
+++ b/src/layouts/CodeAlt/CodeAlt.module.scss
@@ -6,6 +6,7 @@
   border-radius: 8px;
   font-size: 14px;
   line-height: 22px;
+  overflow-x: auto;
   // box-shadow: 0px 24px 40px -20px $dark-alpha-50;
 }
 
