--- a/src/sass/invoker-tokens/mixins/_container.scss
+++ b/src/sass/invoker-tokens/mixins/_container.scss
@@ -74,6 +74,7 @@
 @mixin container-post {
   flex-grow: 1;
   margin: 0 auto;
+  width: 100%;
 
   @include screen(smallPhone) {
     max-width: $page-width + $container-gutter-mobile-small;
