--- a/src/layouts/CodeAlt/CodeAlt.module.scss
+++ b/src/layouts/CodeAlt/CodeAlt.module.scss
@@ -3,11 +3,22 @@
 .root {
   padding: $space-inset-ml;
   margin: $space-stack-l;
-  border-radius: 8px;
+  border-radius: 9px;
   font-size: 14px;
   line-height: 22px;
   overflow-x: auto;
+  background-color: rgb(40, 44, 52);
   // box-shadow: 0px 24px 40px -20px $dark-alpha-50;
+  position: relative;
+
+  & > div:first-child {
+    padding: $space-ml;
+    border-radius: 3px;
+    background-color: $light-alpha-100;
+    box-shadow: 0px 24px 40px -20px $dark-alpha-70;
+    margin-bottom: $space-ll !important;
+    z-index: 9;
+  }
 }
 
 .font {
